--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,22 +1,22 @@
 %# -*- coding: utf-8-unix -*-
-\title{部署轻量级AI的负载均衡算法研究}
-\author{王浩宇}
-\advisor{蒋铃鸽}
+\title{分布式环境下调度算法的设计与优化}
+\author{贾兴国}
+\advisor{戚正伟教授}
 % \coadvisor{某某教授}
-\defenddate{2019年5月17日}
+\defenddate{2019年6月17日}
 \school{上海交通大学}
-\institute{电子系}
-\studentnumber{515021910430}
-\major{信息工程}
+\institute{电子信息与电气工程学院}
+\studentnumber{516030910084}
+\major{软件工程}
 
-\englishtitle{A Study on Load Balancing Algorithm with Lightweight AI}
-\englishauthor{\textsc{Haoyu Wang}}
-\englishadvisor{Prof. \textsc{Lingge Jiang}}
+\englishtitle{Implementation and Optimization of Scheduling Algorithm In Distributed Environment}
+\englishauthor{\textsc{Xingguo Jia}}
+\englishadvisor{Prof. \textsc{Zhengwei Qi}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
-\englishschool{Shanghai Jiao Tong University}
-\englishinstitute{\textsc{Depart of Electronic Engineering, School of Electronic Information and Electrical Engineering} \\
-  \textsc{Shanghai Jiao Tong University} \\
-  \textsc{Shanghai, P.R.China}}
-\englishmajor{Information Engineering}
-\englishdate{May 17th, 2019}
+% \englishschool{Shanghai Jiao Tong University}
+% \englishinstitute{\textsc{Depart of Electronic Engineering, School of Electronic Information and Electrical Engineering} \\
+%   \textsc{Shanghai Jiao Tong University} \\
+%   \textsc{Shanghai, P.R.China}}
+% \englishmajor{Information Engineering}
+% \englishdate{May 17th, 2019}
 
