--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -4,15 +4,17 @@
 %%==================================================
 
 \begin{abstract}
-第五代移动通信系统的基站中普遍采用了数据中心网络以实现各种应用数据的处理，其中负载均衡算法是发挥其大规模、高健壮性、高带宽、低延迟等特点的基石。本文通过总结三个领域的最新进展：深度增强学习算法、数据中心网络中的数据流负载均衡算法和交换机处的缓冲区流量调度算法，针对5G Cloud RAN场景下的负载均衡问题提出了一个新的解决方案。此处的负载均衡是指广义的负载均衡，即包含了从端系统到交换机到端系统整体路径上的负载均衡，涵盖数据流的优先级标记、交换机缓存处的入队、出队操作及选路、拥塞信息采集等一系列过程。该解决方案是一个混合型的结构，对于短数据流采用性能极佳的DRILL分布式负载均衡算法，基于本地信息给出快速的均衡决策；利用离散形式的策略梯度算法和决定性（连续空间下）的actor-critic算法集中式地解决了长数据流的选路、流速率、优先级和对于网络架构中交换机处采用的MLFQ的队列阈值的实时部署，根据动态的网络流量情况，以及以往数据得到的经验，给出一种接近最优的流量优化方法。
 
-\keywords{\large 负载均衡 \quad 增强学习 \quad 数据中心网络 \quad 5G Cloud RAN}
+% 随着机器学习、数据分析等领域的快速发展，单个机器提供的资源已经无法满足应用的需求，而分布式系统可以为上层应用提供海量的计算、内存等资源，越来越受到学术界和工业界的关注。巨型虚拟机解决了现有软件和分布式系统的兼容性问题，将多台物理上分隔的物理机虚拟化为单个虚拟机，为上层软件提供一致的操作系统接口，现有软件无需修改即可运行在由多个节点组成的分布式系统中。而分布式系统资源利用率低的问题依然存在。不同的任务对CPU等资源的需求大不相同，同一任务的资源需求量也在快速变化。这使得给任务分配的固定大小的资源被严重地浪费。工业界给出的数据表明，集群的CPU使用率依然偏低。举例而言，亚马逊的分布式集群的CPU平均使用率仅有7\%-17\%。而巨型虚拟机具有高效简便的任务迁移能力，由于其向客户机操作系统暴露了一个NUMA（非一致性共享内存）架构的虚拟机环境，每一个NUMA节点即是一个分布式集群中的物理节点，只需编写客户机中的任务调度器，即可将CPU占用率较高的节点上的任务调度到另一个CPU占用较低的节点，从而保证了服务的质量，同时提高了分布式集群总体的CPU使用率。本文通过尝试设计巨型虚拟机中的任务调度器，动态感知宿主机中不可迁移任务的工作负载，将可迁移任务在巨型虚拟机中按需迁移，达到了提高分布式集群CPU使用率、保证时延敏感任务的服务质量的效果。同时利用Google Trace对分布式集群进行仿真，模拟一个分布式集群中任务的调度过程，比较并分析了不同调度策略的性能，及其对集群资源使用率、服务质量的影响。
+
+\keywords{\large 巨型虚拟机，调度策略，分布式系统，资源使用率，任务迁移}
 \end{abstract}
 
 \begin{englishabstract}
 
-The base stations in 5G wireless communication network generally utilize data center network to achieve the processing of various applications, and the load balancing algorithm employed in it is the significant foundation that helps to realize its features of big-scale, robustness, high-bandwidth, and low latency. This thesis deals with the general load balancing problem in data center networks. Under the scenario of the Cloud Radio Access Network of the fifth generation of wireless communication system, we propose a new paradigm for a combination of load balancing algorithm and flow scheduling algorithm. The system is a hybrid model with several hierarchies, namely centralized flow scheduling component and distributed load balancing component. The centralized flow scheduling scheme employs the state-of-the-art deep learning algorithm, Deep Deterministic Policy Gradient and Stochastic Policy Gradient algorithm, to solve the problem of assignment of rate limit, queue priorities and path selection for the long flows in the datacenter network and the thresholds of the Multi Level Feedback Queue commonly used in modern commodity switches. The distributed load balancing algorithm, which addresses load balancing problem of narrow sense, utilizes the recent model DRILL proposed by Soudeh Ghorbani, aiming at achieving lower flow complete time and lower total transmission time, not to mention the raising of rate of link utilization.
 
-\englishkeywords{\large load balancing, reinforcement learning, data center network, 5G Cloud RAN}
+With the rapid evolution of machine learning and data analysis, a single machine fails to provide sufficient resources to the current applications. Distributed systems have the ability to provide a vast amount of computing and memory resources to the upper applications, thus gaining more and more attention from both the industry and the academy. Giant Virtual Machine(GiantVM) solves the compatibility problem between conventional software and distributed environments. It virtualizes multiple physically separated machines to be a single virtual machine, providing a consistent OS interface to the upper software. As a result, traditional applications are able to run on a clustered environment consisted of multiple nodes without any modification. However, the low resource utilization problem still continues to exist. The demand of resources varies among different tasks, and resources required by the same task also changes dramatically over time. As a result, there is a serious waste of a fixed amount of resources assigned to the tasks. Data reported by the industry indicates the under-utilized CPU resources in the distributed environments. For example, average CPU utilization is only 7\%-17\% in an Amazon cluster. Giant Virtual Machine, however, facilitates the migration of tasks among the cluster, as it exposes a NUMA(Non-uniform memory access) machine to the guest OS, in which a dedicated scheduler can be designed to migrate tasks between busy and idle virtual NUMA nodes, which are physical nodes in a cluster. Thus, QoS (Quality of Service) is guaranteed, and CPU utilization is increased. This paper devises a task scheduler in GiantVM that can dynamically detects the workload of non-migratable tasks in the host and migrate those migratable tasks in GiantVM, thus optimizing the CPU utilization rate in the cluster and ensuring the QoS of LC(latency critical) tasks. Also, Google trace is used to simulate the migrating and scheduling of tasks in a cluster, to compare the performance of multiple scheduling policies and their effects on resource utilization and QoS in a distributed environment.
+
+\englishkeywords{\large Giant Virtual Machine， scheduling policy， distributed system， resource utilization， task migration }
 \end{englishabstract}
 
