--- a/tex/chapter01.tex
+++ b/tex/chapter01.tex
@@ -6,15 +6,27 @@
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
 \chapter{绪论}
 \label{chap:Intro}
-%\sunxuezhang{建议。。。}
-\section{课题研究背景}
-在第一代与第二代无线移动通信中，蜂窝网络（cellular）或无线电接入网（Radio Access Networks，缩写RAN）由相互独立的基站组成，每个基站配有电力、备用电源、空调系统、环境监测、回程链路等其他支持设施。每个基站内部含有射频信号发射单元，射频信号通过电缆从地面机柜传输至位于高处的基站天线。为了降低射频信号在电缆上的传输损耗，第三代和第四代移动通信采用了分布式基站系统。分布式基站将射频拉远单元（Remote Radio Head，缩写RRH）与基带信号单元（Baseband Unit，缩写BBU）分离，使RRH可以直接部署在基站塔顶距离天线很近的地方，并通过光纤的连接使两者间的距离变大（可达几百米或几千米）而损耗减小。随着4G网络的商用和普遍部署，蜂窝网络的流量负载逐年增长，为满足用户对于虚拟现实、增强现实、4K、8K视频等应用的流量需求以及越来越高的通信体验要求和万物互联的多层次覆盖，5G的研发工作已经广泛进行。作为5G的关键技术，Cloud RAN为无线接入网引入了云技术，使很多BBU集中到一个BBU池。通过应用最近的数据中心网络技术，Cloud RAN能够在BBU池中的BBU之间建立低功耗、高可靠、低延迟、高带宽的连接。它应用了开放的平台与实时虚拟化技术以实现动态共享的资源分配并支持多厂商、多种技术并存的环境。在这种技术架构下，由于BBU池覆盖的范围比原来的一个基站所能覆盖的范围大得多（即一个用户从一个RRH切换到另一个RRH时，他前后连接的两个BBU在同一个BBU池中）\cite{ran2015optimal}，蜂窝系统中流量分布不均匀的问题可以通过在BBU池中部署灵活的、动态自适应的负载均衡算法得以解决。
+\section{研究背景与意义}
+随着单机纵向扩展的难度越来越大、价格越来越昂贵，企业用户对横向扩展架构越来越青睐。由大量价格低廉的普通机器组成的分布式系统满足了海量数据处理、机器学习等任务的资源需求，逐渐成为工业界和学术界关注的重点。然而，分布式系统对系统软件的开发者提出了新的挑战。例如，如果一个应用程序想要运行在MapReduce\cite{MapReduce}的分布式平台之上，则必须调用MapReduce框架的接口，甚至修改其内部逻辑。这将会带来很大的工作量，削弱分布式平台的优势。巨型虚拟机（Giant Virtual Machine）\cite{giantvm}解决了现有程序和分布式系统的兼容问题，它向上层应用提供了单一操作系统镜像，将分布式系统抽象为单一的虚拟机平台，使得现有软件无需修改即可运行在分布式系统之上。虽然巨型虚拟机极大的提高了开发者使用分布式平台的便利性，分布式系统的平均资源使用率偏低的问题依然没有得到解决。从阿里巴巴等技术企业提供的数据来看，数据中心的平均CPU使用率维持在30\%左右，不超过40\%\footnote{不进行任务混部，则仅有20\%的CPU利用率，详见https://102.alibaba.com/detail/?id=61}。
 
-\section{国内外研究现状}
-传统蜂窝网络中的负载均衡算法已被大量研究，如小区呼吸技术\cite{niu2010cell}已被广泛应用于第二代和第三代移动通信网络中。由X. Lin和S. Wang提出的Cloud RAN中的高效RRH切换机制在考虑系统能效条件下实现了负载均衡\cite{lin2010efficient}。C. Ran和S. Wang等人\cite{ran2015optimal}从另一个角度提出了Cloud RAN中的最佳负载均衡算法。他们周期性地监控衡量均衡度的公平指数，当其低于特定阈值时，则重新设计每个小区覆盖的区域以实现系统的负载均衡。C. Tsai和M. Moh在Cloud RAN架构下比较了8种均以降低物联网（Internet of Things，简称IoT）设备通信延迟为目标的负载均衡算法。这些算法或者采用预先定义的指标与阈值以实现监测与负载均衡，或者采用了较为固定而非实时改变的策略。与之相反，B. Shahriari和M. Moh在部分可见的动态环境的情景下提出的一般线上学习（Generic Online Learning，简称GOL）系统可以很好地应用于实时解决5G Cloud RAN中的负载均衡问题。但是，两人的工作主要是针对数据中心网络中虚拟机的高速缓存与云存储上的负载均衡内容，与本课题主要关注的数据流的选路及拥塞信息采集不同。现阶段主流的数据中心负载均衡算法分为两类，一类是集中式负载均衡（如Hedera，Fastpass等），拥塞信息采集的工作由中心化的操作完成，这一类算法可以关注到全局的数据特点，更好地进行选路，但是一般而言其信息流的延迟较高；另一类算法是分布式负载均衡算法（如CONGA，CLOVE等），它们利用本地的信息使交换机作出选路等决策，有较低延迟，但对于全局信息的掌握不像集中式那样清晰。与负载均衡减少数据流完成时间的目标相同，交换机处缓存的流量调度机制也被广泛研究，Wei Bai等人提出的PIAS架构利用多优先级反馈队列，对数据流的优先级进行细化标记，提升了流量调度的性能。一般而言，目前的负载均衡算法与流量调度算法在研究时均默认两者中的另一方是性能优良的算法，本文将二者联合起来考虑，构建一个综合系统，以实现更好的流量优化。
+提高分布式系统中资源使用率的一般方法是，将任务分类为时延敏感型任务（Latency Critical，LC）和尽力而为型任务（Best Effort，BE）。为了保证服务质量（Quality of Service，QoS），时延敏感型任务对资源的要求十分苛刻，不可与其他任务混部，调度器为其提供足够的资源。可以将大量BE型任务混部，提高资源利用率。然而，这会导致BE型任务的服务质量严重下降，而时延敏感型任务偶尔占用大量资源，而大多数时间占用资源少，使得资源的平均占用率无法提高。为了进一步提高资源平均使用率，分布式系统的任务调度器应该动态地感知系统中各个进程的资源使用量，尽可能地将资源紧缺节点上的任务迁移到资源富余的节点上去，从而保证将资源紧缺节点上任务的服务质量，同时充分利用资源富余节点上的资源。目前实现迁移的方式有进程级迁移（process migration），但由于进程和操作系统共享了内存等资源，遇到了残余依赖（residual dependencies）\cite{residual}的问题；由于虚拟机迁移涉及整个操作系统的状态迁移，虚拟机在线迁移（VM Live Migration）\cite{livemigration}则会造成巨大的网络开销，也会造成客户机对外提供服务的暂时性中止。
 
-前面提到的GOL系统中所采用的学习算法是人工智能领域结合深度学习与增强学习的一种决策优化算法，是针对实时决策的最好算法之一。以此方法为核心的AlphaGo\cite{alphago}接连战胜了人类最顶尖的围棋高手，成为举世瞩目的焦点。增强学习在与环境的交互过程中学习。在交互的每一步，智能系统会基于环境的状态选择一个动作以改变环境的状态，并受到相应的奖励或惩罚。增强学习在解决模型事先未知的情景下表现得非常有用。由于其可与环境交互并从交互过程中得到的奖励或惩罚学习更好的决策，它已被应用于各个领域，如计算机视觉中的姿态检测与跟踪问题、自然语言处理中的命名实体识别、知识图谱中的关系预测等，最近也被应用于通信网络中，如数据中心网络coflow调度机制问题。
+而巨型虚拟机将分布式系统抽象为简单的单一的客户机操作系统，而通过向客户机操作系统暴露非一致性共享内存的硬件架构，使得客户机操作系统得知底层分布式系统的拓扑结构。在隐藏分布式软件框架复杂性的同时，巨型虚拟机也隐藏了分布式系统之间迁移的复杂性，即可以仅仅通过调度客户机内部进程完成集群之间的任务调度。本文通过编写操作系统内的调度脚本，实现了集群节点间的负载均衡，在提高集群总体CPU使用率的同时，满足集群中LC型任务的QoS要求。为了进一步减小集群间任务调度的网络开销和提高集群CPU使用率的效果，本文利用Google trace\footnote{谷歌Borg集群29天内获得的任务调度与资源用量数据：https://github.com/google/cluster-data}对分布式集群进行仿真，模拟各类调度策略，研究了不同调度算法以及调度参数对集群性能、网络开销的影响。
 
+\section{研究现状}
+在分布式集群的调度策略方面，Mesos\cite{mesos}通过细粒度的资源共享提高了集群的资源使用率，然而由于现今的分布式框架都自带有极其复杂的调度器，会彼此产生影响，故Mesos设计了一个双层调度器，在各个分布式框架之间进行调度，使得各个框架达到接近最优的数据局部性（data locality）。Omega\cite{omega}是谷歌的集群管理系统，其核心是一个共享状态、无锁的并行程序调度器，使得调度器的延迟大大下降，相比于集中式的集群调度器更好地应对了集群中任务对资源需求的极速变化。随着数据处理任务的并行度越来越高，延迟要求越来越高，Sparrow\cite{sparrow}提出了一个分布式的、细粒度的调度器，解决了集中式采样系统所造成的吞吐量下降、延迟提高的问题。Graphene\cite{graphene}关注的是分布式系统中任务之间的依赖关系，以及多元化的资源需求。在并行数据处理系统中，任务之间的DAG（directed acyclic graph，依赖关系网）是调度器作出调度决策时所需要关注的主要信息。Graphene则在任务运行时计算出任务之间的DAG，对未来的调度策略进行改进。本文的实现依赖于巨型虚拟机，它通过系统虚拟化的方式将分布式系统的复杂性屏蔽，在减轻上层软件编写者负担的同时，也隐藏了诸多优化的可能性。通过修改巨型虚拟机监控器的代码来完成集群调度的优化则是一项相当复杂的工作，不是一个好的选项。
 
-\section{本文研究思路及组织结构}
-在B. Shahriari和M. Moh工作的启发下，本课题旨在采用深度增强学习的方法提升Cloud RAN架构中负载均衡算法的性能。通过利用深度学习可以从环境与智能系统交互及历史信息等中提取抽象特征的能力，并借助增强学习系统感知环境、接收奖励与惩罚的能力，构建增强学习算法解决均衡问题。本论文的第二章讨论增强学习算法，从基于值函数的增强学习、基于策略的增强学习、actor-critic算法三方面介绍深度神经网络与三种增强学习算法的结合；第三章讨论5G Cloud RAN中的负载均衡问题，此处的负载均衡是指广义的负载均衡，即包含了从端系统到交换机到端系统整体路径上的负载均衡，涵盖数据流的优先级标记、交换机缓存处的入队、出队操作及选路、拥塞信息采集等一系列过程，在对5G时代背景下的数据中心有了基本认识之后讨论目前的负载均衡及流量调度算法，如MPTCP、CONGA、Expeditus、LocalFlow、DRILL、PIAS等；第四章介绍本文提出的基于深度增强学习的流量优化系统，从系统架构和仿真过程两方面阐述系统的实现、仿真环境、性能分析等内容；最后总结全文，并对基于本文的进一步的研究提出一些见解。
+\section{本文工作}
+Steal time指vCPU（虚拟机CPU）运行过程中等待物理CPU上其他任务所占的时间。本文将巨型虚拟机部署在有四个节点的分布式集群上，将BE型任务（可迁移任务）运行在客户机中，同时将LC型任务与巨型虚拟机混部，通过读取客户机中的steal time计算宿主机上的工作负载，选取巨型虚拟机中steal time最低的NUMA node（非一致性共享内存节点），将虚拟机中所有的BE型任务迁移到该node上，从而提高了集群总体的CPU使用率，也保证了集群中任务的QoS。本文还利用Google trace中clusterdata2011-2的task-uasge和task-event数据，模拟了一个由800台相同机器组成的分布式集群，使用Python脚本读取数据并模拟了调度过程，设计并测试了各种调度策略的效果。模拟的调度策略有：
+\begin{itemize}
+  \item 根据CPU占用率调整任务在不同节点上的分布进行调度。其中需要考虑的参数有：每个巨型虚拟机拥有节点的个数、触发进程迁移的CPU 临界值（CPU threshold）。每个巨型虚拟机占用的节点越少、CPU占用率的临界值越低，该调度策略就越激进，网络带宽的占用也越大。
+  \item 在考虑CPU占用率的基础上同时考虑Memory占用率。设置一个内存占用量的临界值（Memory usage threshold），只有在此临界值之下的进程才算作可迁移进程。进程占用的内存越小，网络开销也越小。
+\end{itemize}
+
+\section{本文结构}
+本文将按如下形式进行叙述：
+\begin{itemize}
+  \item 第二章介绍和本文有关的背景知识，包括虚拟化技术、巨型虚拟机的架构，以及巨型虚拟机中DSM组件与NUMA的相似性，为后文减小巨型虚拟机任务迁移的开销所做的工作做铺垫。
+  \item 第三章介绍巨型虚拟机中任务调度器的实现，通过动态感知宿主机工作负载进行虚拟机中的任务调度，从而达到提高分布式系统资源使用率的目的，优化集群的任务调度。
+  \item 第四章
+\end{itemize}
